--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,8 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-
-
+# latex file ignore
+*.pdf
+*.synctex.gz
 
 # End of https://www.toptal.com/developers/gitignore/api/macos
