--- a/database/NoSQL/test/.env
+++ b/database/NoSQL/test/.env
@@ -1,3 +1,3 @@
-# for accessibility, you have to give permission for certain IP address
+# for accessibility, you have to give permission for certain IP address as well as password
 MONGODB_PWD = "j8hm2oZpwu9oV3pI"
 
